[package]
name = "live-server-lsp"
version = "0.3.7"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = [
    "fs",
    "io-std",
    "sync",
    "rt-multi-thread",
] }
tower-lsp = "0.20.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rusty-live-server = { git = "https://github.com/frederik-uni/rusty-live-server", default-features = false }
webbrowser = "1.0.4"
